[project]
name = "couponfinder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yolo2333", email = "1397468981@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/couponfinder"]
