[project]
name = "couponfinder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yolo2233", email = "huangjm199x@gmail.com" }
]
dependencies = [
    "mypy>=1.11.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/couponfinder"]
